chore(fileimport): TRACEFOSS-2741 Added test / importtest data.