@@ -21,15 +21,27 @@ package org.eclipse.tractusx.traceability.assets.domain.importpoc;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import lombok.extern.slf4j.Slf4j;
+import org.eclipse.tractusx.traceability.assets.domain.asbuilt.model.aspect.DetailAspectDataTractionBatteryCode;
 import org.eclipse.tractusx.traceability.assets.domain.base.model.AssetBase;
+import org.eclipse.tractusx.traceability.assets.domain.base.model.Descriptions;
+import org.eclipse.tractusx.traceability.assets.domain.base.model.ImportState;
+import org.eclipse.tractusx.traceability.assets.domain.base.model.Owner;
 import org.eclipse.tractusx.traceability.assets.infrastructure.base.irs.model.request.BomLifecycle;
+import org.eclipse.tractusx.traceability.assets.infrastructure.base.irs.model.response.GenericSubmodel;
 import org.eclipse.tractusx.traceability.assets.infrastructure.base.irs.model.response.Submodel;
+import org.eclipse.tractusx.traceability.assets.infrastructure.base.irs.model.response.relationship.Relationship;
+import org.eclipse.tractusx.traceability.assets.infrastructure.base.irs.model.response.semanticdatamodel.LocalId;
+import org.eclipse.tractusx.traceability.assets.infrastructure.base.irs.model.response.semanticdatamodel.SemanticDataModel;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumMap;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 public record ImportRequest(
@@ -47,20 +59,21 @@ public record ImportRequest(
         for (AssetWrapperRequest assetWrapperRequest : assetRawRequestList) {
             AssetMetaInfoRequest assetMetaInfoRequest = assetWrapperRequest.assetMetaInfoRequest();
 
-            List<Submodel> mainAspectsAsPlanned = assetWrapperRequest.mainAspectModels().stream().filter(submodel -> isAsPlanned(submodel.getAspectType())).toList();
-            List<Submodel> upwardAspectsAsPlanned = assetWrapperRequest.upwardRelationship().stream().filter(submodel -> isAsPlanned(submodel.getAspectType())).toList();
-            List<Submodel> downwardAspectsAsPlanned = assetWrapperRequest.downwardRelationship().stream().filter(submodel -> isAsPlanned(submodel.getAspectType())).toList();
-
-            List<Submodel> mainAspectsAsBuilt = assetWrapperRequest.mainAspectModels().stream().filter(submodel -> !isAsPlanned(submodel.getAspectType())).toList();
-            List<Submodel> upwardAspectsAsBuilt = assetWrapperRequest.upwardRelationship().stream().filter(submodel -> !isAsPlanned(submodel.getAspectType())).toList();
-            List<Submodel> downwardAspectsAsBuilt = assetWrapperRequest.downwardRelationship().stream().filter(submodel -> !isAsPlanned(submodel.getAspectType())).toList();
-
-            if (!mainAspectsAsPlanned.isEmpty()) {
-                assetAsPlannedWrapperRequest.add(new AssetWrapperRequest(assetMetaInfoRequest, mainAspectsAsPlanned, upwardAspectsAsPlanned, downwardAspectsAsPlanned));
+            if (BomLifecycle.AS_BUILT.equals(assetWrapperRequest.bomLifecycle())){
+                List<SemanticDataModel> mainAspectsAsBuilt = assetWrapperRequest.mainAspectModels();
+                List<GenericSubmodel> upwardAspectsAsBuilt = assetWrapperRequest.upwardRelationship();
+                List<GenericSubmodel> downwardAspectsAsBuilt = assetWrapperRequest.downwardRelationship();
+                assetAsBuiltWrapperRequest.add(new AssetWrapperRequest(assetMetaInfoRequest, mainAspectsAsBuilt, upwardAspectsAsBuilt, downwardAspectsAsBuilt, BomLifecycle.AS_BUILT));
             }
-            if (!mainAspectsAsBuilt.isEmpty()) {
-                assetAsBuiltWrapperRequest.add(new AssetWrapperRequest(assetMetaInfoRequest, mainAspectsAsBuilt, upwardAspectsAsBuilt, downwardAspectsAsBuilt));
+
+            if (BomLifecycle.AS_PLANNED.equals(assetWrapperRequest.bomLifecycle())){
+                List<SemanticDataModel> mainAspectsAsPlanned = assetWrapperRequest.mainAspectModels();
+                List<GenericSubmodel> upwardAspectsAsPlanned = assetWrapperRequest.upwardRelationship();
+                List<GenericSubmodel> downwardAspectsAsPlanned = assetWrapperRequest.downwardRelationship();
+                assetAsPlannedWrapperRequest.add(new AssetWrapperRequest(assetMetaInfoRequest, mainAspectsAsPlanned, upwardAspectsAsPlanned, downwardAspectsAsPlanned, BomLifecycle.AS_PLANNED));
+
             }
+
         }
         Map<BomLifecycle, List<AssetWrapperRequest>> bomLifecycleToAssetWrapperList = new EnumMap<>(BomLifecycle.class);
 
@@ -70,49 +83,48 @@ public record ImportRequest(
     }
 
     public List<AssetBase> convertAssetsAsBuilt() {
-        return new ArrayList<>(mapToOwnPartsAsBuilt(null, null));
+        return new ArrayList<>(mapToOwnPartsAsBuilt());
     }
 
     public List<AssetBase> convertAssetsAsPlanned() {
         return new ArrayList<>(mapToOwnPartsAsPlanned(null, null));
     }
 
-    private List<AssetBase> mapToOwnPartsAsBuilt(Map<String, String> shortIds, Map<String, String> bpnMapping) {
+    private List<AssetBase> mapToOwnPartsAsBuilt() {
 
         List<AssetWrapperRequest> assetWrapperRequests = bomLifecycleToAssetWrapperRequestList.get(BomLifecycle.AS_BUILT);
-/*        List<AssetWrapperRequest> assetWrapperRequests = assetAsBuiltWrapperRequest();
+        for (AssetWrapperRequest assetWrapperRequest : assetWrapperRequests){
 
-        List<SemanticDataModel> ownParts = semanticDataModels().stream()
-                .filter(semanticDataModel -> Aspect.isMasterAspect(semanticDataModel.getAspectType()))
-                .filter(semanticDataModel -> isOwnPart(semanticDataModel, jobStatus))
-                .toList();
-        log.info(":: mapToOwnPartsAsBuilt()");
-        log.info(":: ownParts: {}", ownParts);
-        // The Relationship on supplierPart catenaXId contains the id of the asset which has a relationship
-        Map<String, List<Relationship>> supplierPartsMap = relationships().stream()
-                .filter(relationship -> SINGLE_LEVEL_BOM_AS_BUILT.equals(relationship.aspectType().getAspectName()))
-                .collect(Collectors.groupingBy(Relationship::catenaXId, Collectors.toList()));
+            AssetMetaInfoRequest assetMetaInfoRequest = assetWrapperRequest.assetMetaInfoRequest();
+            List<SemanticDataModel> mainAspectModels = assetWrapperRequest.mainAspectModels();
+            List<GenericSubmodel> downwardModels = assetWrapperRequest.downwardRelationship();
+            List<GenericSubmodel> upwardModels = assetWrapperRequest.upwardRelationship();
 
-        // The Relationship on customerPart childCatenaXId contains the id of the asset which has a relationship
-        Map<String, List<Relationship>> customerPartsMap = relationships().stream()
-                .filter(relationship -> SINGLE_LEVEL_USAGE_AS_BUILT.equals(relationship.aspectType().getAspectName()))
-                .collect(Collectors.groupingBy(Relationship::childCatenaXId, Collectors.toList()));
 
-        //TRACEFOSS-2333: A tractionBatteryCode has no catenaxId. If a tractionBatteryCode is present for the requested
-        // global_asset_id, then it can be automatically mapped to the own SerialPart
-        Optional<DetailAspectDataTractionBatteryCode> tractionBatteryCodeOptional = semanticDataModels.stream()
-                .filter(semanticDataModel -> semanticDataModel.getAspectType().contains(TRACTION_BATTERY_CODE.getAspectName()))
-                .map(DetailAspectDataTractionBatteryCode.class::cast).findFirst();
+/*            Map<String, List<Relationship>> supplierPartsMap = relationships().stream()
+                    .filter(relationship -> SINGLE_LEVEL_BOM_AS_BUILT.equals(relationship.aspectType().getAspectName()))
+                    .collect(Collectors.groupingBy(Relationship::catenaXId, Collectors.toList()));
 
-        final List<AssetBase> assets = ownParts
-                .stream()
-                .map(semanticDataModel -> semanticDataModel.toDomainAsBuilt(semanticDataModel.localIdentifiers(), shortIds, Owner.OWN, bpnMapping,
-                        getParentParts(customerPartsMap, shortIds, semanticDataModel.catenaXId()),
-                        getChildParts(supplierPartsMap, shortIds, semanticDataModel.catenaXId()),
-                        tractionBatteryCodeOptional, ImportState.TRANSIENT))
-                .toList();
-        log.info(":: mapped assets: {}", assets);
-        return assets;*/
+            // The Relationship on customerPart childCatenaXId contains the id of the asset which has a relationship
+            Map<String, List<Relationship>> customerPartsMap = relationships().stream()
+                    .filter(relationship -> SINGLE_LEVEL_USAGE_AS_BUILT.equals(relationship.aspectType().getAspectName()))
+                    .collect(Collectors.groupingBy(Relationship::childCatenaXId, Collectors.toList()));*/
+
+
+            List<LocalId> localIds = Collections.emptyList();
+            Map<String, String> shortIds = new HashMap<>();
+            Owner owner = Owner.OWN;
+            Map<String, String> bpns = new HashMap<>();
+            List<Descriptions> parentRelations =  Collections.emptyList();
+            List<Descriptions> childRelations = Collections.emptyList();
+            Optional< DetailAspectDataTractionBatteryCode > tractionBatteryCodeOptional = Optional.empty();
+            ImportState assetImportState = ImportState.TRANSIENT;
+
+            List<AssetBase> list = mainAspectModels.stream().map(semanticDataModel -> semanticDataModel.toDomainAsBuilt(localIds, shortIds, owner, bpns, parentRelations, childRelations, tractionBatteryCodeOptional, assetImportState)).toList();
+            return list;
+
+        }
+
         return Collections.emptyList();
     }
 
